3.3/deployment-back.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-back
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
