3.3/deployment-cache.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-cache
  namespace: app
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
