3.3/deployment-front.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-front
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 80
