3.3/service-back.yaml

apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: app
spec:
  ports:
    - name: miltitool
      port: 80
  selector:
    app: backend
