3.3/service-cache.yaml

apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  ports:
    - name: multitool
      port: 80
  selector:
    app: cache
