3.3/service-front.yaml

apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: app
spec:
  ports:
    - name: multitool
      port: 80
  selector:
    app: frontend
